style: Center submit button while maintaining full width

--- a/index.html
+++ b/index.html
@@ -163,7 +163,6 @@
       left: 100%;
     }
     .submit-btn {
-      width: 100%;
       padding: 12px;
       margin: 8px 0;
       background: linear-gradient(to right, #26c6da, #0288d1);
@@ -178,6 +177,10 @@
       align-items: center;
       box-shadow: 0 3px 12px rgba(38, 198, 218, 0.3);
       text-align: center;
+      min-width: 200px;
+      width: auto;
+      margin-left: auto;
+      margin-right: auto;
     }
     .submit-btn:hover {
       background: linear-gradient(to right, #0288d1, #01579b);
@@ -838,7 +841,7 @@
       },
       es: {
         title: "Desbloquea tu propiedad en Florida",
-        subtitle: "Emparejamiento gratuito con agente por un experto licenciado en FL + Innovador Web3",
+        subtitle: "Emparejamiento gratuito con agente por un experto licenciado FL + Innovador Web3",
         name: "Tu nombre",
         email: "Tu correo electrónico",
         type_select: "Comprador, Vendedor, Inquilino, Arrendador, Inversionista",
@@ -2024,7 +2027,7 @@
         central_ac: "中央空調",
         hardwood: "木製フローリング",
         move_in_ready: "即入居可",
-        fixer_upper: "修復可",
+        fixer_upper: "可翻修",
         other_features: "その他の特徴",
         deal_breakers: "取引の障害",
         sellers_landlords: "売家/大家向け",
