--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(15, 30, 50, 0.8);
-      backdrop-filter: blur(4px);
+      background: rgba(17, 29, 44, 0.5);
+      backdrop-filter: blur(-3px);
       z-index: 1;
     }
     .container {
@@ -75,11 +75,15 @@
       margin-bottom: 20px;
     }
     .form-box {
-      background: rgba(30, 40, 60, 0.9);
-      padding: 25px;
+      background: rgba(30, 40, 60, 0.8);
+      padding: 25px 25px 5px 25px;
       border-radius: 10px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
-      backdrop-filter: blur(10px);
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.9);
+      backdrop-filter: blur(5px);
+      margin: 30px auto;
+      max-width: 600px;
+      position: relative;
+      z-index: 2;
     }
     form input, form textarea, form select {
       width: 100%;
@@ -113,27 +117,27 @@
     .dropdown-btn {
       width: 100%;
       padding: 12px;
-      margin: 8px 0;
-      background: linear-gradient(to right, #ff8c00, #e65100);
+      margin: 25px 0;
+      background: linear-gradient(to right, #26c6da, #0288d1);
       color: #fff;
-      border: none;
+      border: 1px solid #26c6da;
       border-radius: 6px;
       font-size: 1em;
-      font-weight: 600;
+      font-weight: 400;
       cursor: pointer;
       transition: all 0.3s ease;
       display: flex;
       justify-content: center;
       align-items: center;
-      box-shadow: 0 4px 15px rgba(255, 140, 0, 0.4);
+      box-shadow: 0 4px 15px rgba(38, 198, 218, 0.4);
       text-align: center;
       position: relative;
       overflow: hidden;
     }
     .dropdown-btn:hover {
-      background: linear-gradient(to right, #e65100, #d64100);
+      background: linear-gradient(to right, #0288d1, #01579b);
       transform: scale(1.02);
-      box-shadow: 0 6px 20px rgba(230, 81, 0, 0.5);
+      box-shadow: 0 6px 20px rgba(38, 198, 218, 0.5);
     }
     .dropdown-icon {
       font-size: 0.9em;
@@ -164,7 +168,7 @@
     }
     .submit-btn {
       padding: 12px;
-      margin: 8px 0;
+      margin: 24px 0;
       background: linear-gradient(to right, #26c6da, #0288d1);
       color: #fff;
       border: 1px solid #26c6da;
@@ -181,6 +185,7 @@
       width: auto;
       margin-left: auto;
       margin-right: auto;
+      font-weight: 600;
     }
     .submit-btn:hover {
       background: linear-gradient(to right, #0288d1, #01579b);
