update: Align logos and match form width in services section

--- a/index.html
+++ b/index.html
@@ -757,24 +757,24 @@
     </div>
     <!-- Updated Services/Affiliates Section -->
     <div class="services-affiliates" style="margin: 30px auto; max-width: 600px; color: #e0e6ed; font-size: 0.95em;">
-      <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 15px 20px; align-items: center; padding: 15px 0;">
+      <div style="display: grid; grid-template-columns: 60px 1fr; gap: 15px 20px; align-items: center; max-width: 600px;">
         <!-- Keller Williams -->
-        <div style="text-align: left;">
+        <div style="text-align: right;">
           <a href="https://www.kw.com" target="_blank">
-            <img src="Logos/kw logo.png" alt="Keller Williams Logo" class="kw-logo">
+            <img src="Logos/kw logo.png" alt="Keller Williams Logo" style="height: 30px; width: auto; display: block;">
           </a>
         </div>
-        <p style="margin: 0;" class="kw-text">
+        <p style="margin: 0;">
           <a href="https://www.kw.com/search" target="_blank" style="color: #26c6da; text-decoration: none; font-weight: 500;">Find your dream home with Keller Williams</a> - Your trusted real estate brokerage partner.
         </p>
 
         <!-- Propy -->
         <div style="text-align: right;">
           <a href="https://propy.com" target="_blank">
-            <img src="Logos/propy-logo-1.png" alt="Propy Logo" class="propy-logo">
+            <img src="Logos/propy-logo-1.png" alt="Propy Logo" style="height: 30px; width: auto; display: block;">
           </a>
         </div>
-        <p style="margin: 0;" class="propy-text">
+        <p style="margin: 0;">
           <a href="https://propy.com" target="_blank" style="color: #26c6da; text-decoration: none; font-weight: 500;">Propy</a> - Streamlined title and real estate transactions with blockchain tech.
         </p>
 
