update: Replace grid with flexible positionable layout for services section

--- a/index.html
+++ b/index.html
@@ -757,30 +757,30 @@
     </div>
     <!-- Updated Services/Affiliates Section -->
     <div class="services-affiliates" style="margin: 30px auto; max-width: 600px; color: #e0e6ed; font-size: 0.95em;">
-      <div style="display: grid; grid-template-columns: 60px 1fr; gap: 15px 20px; align-items: center; max-width: 600px;">
+      <div style="max-width: 600px;">
         <!-- Keller Williams -->
-        <div style="text-align: right;">
-          <a href="https://www.kw.com" target="_blank">
-            <img src="Logos/kw logo.png" alt="Keller Williams Logo" style="height: 30px; width: auto; display: block;">
+        <div style="position: relative; margin-bottom: 20px; display: flex; align-items: center;">
+          <a href="https://www.kw.com" target="_blank" style="position: relative; margin-left: -20px; margin-top: -5px;">
+            <img src="Logos/kw logo.png" alt="Keller Williams Logo" style="height: 60px; width: auto; display: block;">
           </a>
+          <p style="position: relative; margin-left: 10px; margin-top: 0px; max-width: 500px; line-height: 1.4;">
+            <a href="https://www.kw.com/search" target="_blank" style="color: #26c6da; text-decoration: none; font-weight: 500;">Find your dream home with Keller Williams</a> - Your trusted real estate brokerage partner.
+          </p>
         </div>
-        <p style="margin: 0;">
-          <a href="https://www.kw.com/search" target="_blank" style="color: #26c6da; text-decoration: none; font-weight: 500;">Find your dream home with Keller Williams</a> - Your trusted real estate brokerage partner.
-        </p>
 
         <!-- Propy -->
-        <div style="text-align: right;">
-          <a href="https://propy.com" target="_blank">
+        <div style="position: relative; margin-bottom: 20px; display: flex; align-items: center;">
+          <a href="https://propy.com" target="_blank" style="position: relative; margin-left: 0px; margin-top: 0px;">
             <img src="Logos/propy-logo-1.png" alt="Propy Logo" style="height: 30px; width: auto; display: block;">
           </a>
+          <p style="position: relative; margin-left: 10px; margin-top: 0px; max-width: 500px; line-height: 1.4;">
+            <a href="https://propy.com" target="_blank" style="color: #26c6da; text-decoration: none; font-weight: 500;">Propy</a> - Streamlined title and real estate transactions with blockchain tech.
+          </p>
         </div>
-        <p style="margin: 0;">
-          <a href="https://propy.com" target="_blank" style="color: #26c6da; text-decoration: none; font-weight: 500;">Propy</a> - Streamlined title and real estate transactions with blockchain tech.
-        </p>
 
         <!-- Web3 Education -->
-        <div style="grid-column: 1 / -1; padding-top: 10px;">
-          <p style="margin: 0;">
+        <div style="position: relative; margin-bottom: 20px;">
+          <p style="position: relative; margin-left: 0px; margin-top: 0px; max-width: 600px; line-height: 1.4;">
             Web3 Education: 
             <a href="https://cyrin.io" target="_blank" style="color: #26c6da; text-decoration: none;">Cyrin</a> | 
             <a href="https://updraft.io" target="_blank" style="color: #26c6da; text-decoration: none;">Updraft</a> | 
@@ -789,8 +789,8 @@
         </div>
 
         <!-- Foreclosure Resources -->
-        <div style="grid-column: 1 / -1;">
-          <p style="margin: 0;">
+        <div style="position: relative; margin-bottom: 20px;">
+          <p style="position: relative; margin-left: 0px; margin-top: 0px; max-width: 600px; line-height: 1.4;">
             <a href="https://www.nar.realtor/short-sales-foreclosures" target="_blank" style="color: #26c6da; text-decoration: none; font-weight: 500;">Free Foreclosure/Short Sale Resources</a> - Get help and info from NAR.
           </p>
         </div>
@@ -1063,7 +1063,7 @@
         issues: "Problemas conocidos con la propiedad",
         additional_info: "Información adicional",
         how_heard: "¿Cómo nos conociste?",
-        referral: "Referencia",
+        referral: "Introducción",
         website: "Sitio web",
         social_media: "Redes sociales",
         sign: "Cartel",
