update: Create matching boxes for KW and Propy with form-style design

--- a/index.html
+++ b/index.html
@@ -758,29 +758,29 @@
     <!-- Updated Services/Affiliates Section -->
     <div class="services-affiliates" style="margin: 30px auto; max-width: 600px; color: #e0e6ed; font-size: 0.95em;">
       <div style="max-width: 600px;">
-        <!-- Keller Williams -->
-        <div style="position: relative; margin-bottom: 30px; display: flex; align-items: center;">
-          <a href="https://www.kw.com" target="_blank" style="position: relative; margin-left: 10px; margin-top: -5px;">
-            <img src="Logos/kw logo.png" alt="Keller Williams Logo" style="height: 60px; width: auto; display: block;">
+        <!-- Keller Williams Box -->
+        <div style="background: #263238; border-radius: 8px; padding: 20px; margin-bottom: 20px; text-align: center;">
+          <a href="https://www.kw.com" target="_blank" style="display: block; margin-bottom: 10px;">
+            <img src="Logos/kw logo.png" alt="Keller Williams Logo" style="height: 60px; width: auto; display: block; margin: 0 auto;">
           </a>
-          <p style="position: relative; margin-left: 65px; margin-top: 0px; max-width: 500px; line-height: 1.4;">
+          <p style="margin: 0; line-height: 1.4;">
             <a href="https://www.kw.com/search" target="_blank" style="color: #26c6da; text-decoration: none; font-weight: 500;">Find your dream home with Keller Williams</a> - Your trusted real estate brokerage partner.
           </p>
         </div>
 
-        <!-- Propy -->
-        <div style="position: relative; margin-bottom: 60px; display: flex; align-items: center;">
-          <a href="https://propy.com" target="_blank" style="position: relative; margin-left: 10px; margin-top: 0px;">
-            <img src="Logos/propy-logo-1.png" alt="Propy Logo" style="height: 30px; width: auto; display: block;">
+        <!-- Propy Box -->
+        <div style="background: #263238; border-radius: 8px; padding: 20px; margin-bottom: 20px; text-align: center;">
+          <a href="https://propy.com" target="_blank" style="display: block; margin-bottom: 10px;">
+            <img src="Logos/propy-logo-1.png" alt="Propy Logo" style="height: 30px; width: auto; display: block; margin: 0 auto;">
           </a>
-          <p style="position: relative; margin-left: 50px; margin-top: 0px; max-width: 500px; line-height: 1.4;">
+          <p style="margin: 0; line-height: 1.4;">
             <a href="https://propy.com" target="_blank" style="color: #26c6da; text-decoration: none; font-weight: 500;">Propy</a> - Streamlined title and real estate transactions with blockchain tech.
           </p>
         </div>
 
         <!-- Web3 Education -->
-        <div style="position: relative; margin-bottom: 30px;">
-          <p style="position: relative; margin-left: -10px; margin-top: 0px; max-width: 600px; line-height: 1.4;">
+        <div style="position: relative; margin-bottom: 20px;">
+          <p style="position: relative; margin-left: 0px; margin-top: 0px; max-width: 600px; line-height: 1.4;">
             Web3 Education: 
             <a href="https://cyrin.io" target="_blank" style="color: #26c6da; text-decoration: none;">Cyrin</a> | 
             <a href="https://updraft.io" target="_blank" style="color: #26c6da; text-decoration: none;">Updraft</a> | 
@@ -789,7 +789,7 @@
         </div>
 
         <!-- Foreclosure Resources -->
-        <div style="position: relative; margin-bottom: 60px;">
+        <div style="position: relative; margin-bottom: 20px;">
           <p style="position: relative; margin-left: 0px; margin-top: 0px; max-width: 600px; line-height: 1.4;">
             <a href="https://www.nar.realtor/short-sales-foreclosures" target="_blank" style="color: #26c6da; text-decoration: none; font-weight: 500;">Free Foreclosure/Short Sale Resources</a> - Get help and info from NAR.
           </p>
@@ -1059,7 +1059,7 @@
         good: "Bueno",
         fair: "Razoável",
         needs_work: "Necesita trabajo",
-        upgrades: "Mejoras/renovaciones recientes",
+        upgrades: "Mejoras/reformas recientes",
         issues: "Problemas conocidos con la propiedad",
         additional_info: "Información adicional",
         how_heard: "¿Cómo nos conociste?",
@@ -1151,14 +1151,14 @@
         "2_beds": "2卧",
         "3_beds": "3卧",
         "4_beds": "4卧",
-        "5_plus_beds": "5卧以上",
+        "5_plus_beds": "5+卧",
         no_pref_bed: "无偏好",
         bathrooms: "浴室：",
         "1_bath": "1浴",
         "1_5_baths": "1.5浴",
         "2_baths": "2浴",
         "2_5_baths": "2.5浴",
-        "3_plus_baths": "3浴以上",
+        "3_plus_baths": "3+浴",
         no_pref_bath: "无偏好",
         square_footage: "首选面积",
         locations: "首选地点/近邻",
@@ -2131,14 +2131,14 @@
         "2_beds": "2寝室",
         "3_beds": "3寝室",
         "4_beds": "4寝室",
-        "5_plus_beds": "5寝室以上",
+        "5_plus_beds": "5+寝室",
         no_pref_bed: "特に希望なし",
         bathrooms: "浴室：",
         "1_bath": "1浴室",
         "1_5_baths": "1.5浴室",
         "2_baths": "2浴室",
         "2_5_baths": "2.5浴室",
-        "3_plus_baths": "3浴室以上",
+        "3_plus_baths": "3+浴室",
         no_pref_bath: "特に希望なし",
         square_footage: "希望する面積",
         locations: "希望する場所/近隣",
