--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
     <div class="services-affiliates" style="margin: 30px auto; max-width: 600px; color: #e0e6ed; font-size: 0.95em;">
       <div style="max-width: 600px;">
         <!-- Keller Williams Box -->
-        <div style="background: #263238; border-radius: 8px; padding: 20px; margin-bottom: 20px; text-align: center;">
+        <div style="background: rgba(30, 40, 60, 0.8); border-radius: 8px; padding: 20px; margin-bottom: 20px; text-align: center;">
           <a href="https://www.kw.com" target="_blank" style="display: block; margin-bottom: 10px;">
             <img src="Logos/kw logo.png" alt="Keller Williams Logo" style="height: 60px; width: auto; display: block; margin: 0 auto;">
           </a>
@@ -769,7 +769,7 @@
         </div>
 
         <!-- Propy Box -->
-        <div style="background: #263238; border-radius: 8px; padding: 20px; margin-bottom: 20px; text-align: center;">
+        <div style="background: rgba(30, 40, 60, 0.8); border-radius: 8px; padding: 20px; margin-bottom: 20px; text-align: center;">
           <a href="https://propy.com" target="_blank" style="display: block; margin-bottom: 10px;">
             <img src="Logos/propy-logo-1.png" alt="Propy Logo" style="height: 30px; width: auto; display: block; margin: 0 auto;">
           </a>
