update: Create matching boxes for KW and Propy with form-style design

--- a/index.html
+++ b/index.html
@@ -757,29 +757,30 @@
     </div>
     <!-- Updated Services/Affiliates Section -->
     <div class="services-affiliates" style="margin: 30px auto; max-width: 600px; color: #e0e6ed; font-size: 0.95em;">
-      <div style="max-width: 600px;">
+      <div style="max-width: 600px; display: flex; justify-content: space-between;">
         <!-- Keller Williams Box -->
-        <div style="background: rgba(30, 40, 60, 0.8); border-radius: 8px; padding: 20px; margin-bottom: 20px; text-align: center;">
-          <a href="https://www.kw.com" target="_blank" style="display: block; margin-bottom: 10px;">
-            <img src="Logos/kw logo.png" alt="Keller Williams Logo" style="height: 60px; width: auto; display: block; margin: 0 auto;">
+        <div style="background: rgba(30, 40, 60, 0.8); border-radius: 8px; padding: 20px; width: 290px; height: 150px; display: inline-flex; flex-direction: column; align-items: center; justify-content: center; margin-right: 10px;">
+          <a href="https://www.kw.com" target="_blank" style="display: block; margin-bottom: -10px;">
+            <img src="Logos/kw logo.png" alt="Keller Williams Logo" style="height: 60px; width: auto; display: block;">
           </a>
-          <p style="margin: 0; line-height: 1.4;">
+          <p style="margin: 0; line-height: 1.4; text-align: center; color: #e0e6ed;">
             <a href="https://www.kw.com/search" target="_blank" style="color: #26c6da; text-decoration: none; font-weight: 500;">Find your dream home with Keller Williams</a> - Your trusted real estate brokerage partner.
           </p>
         </div>
 
         <!-- Propy Box -->
-        <div style="background: rgba(30, 40, 60, 0.8); border-radius: 8px; padding: 20px; margin-bottom: 20px; text-align: center;">
+        <div style="background: rgba(30, 40, 60, 0.8); border-radius: 8px; padding: 40px; width: 290px; height: 150px; display: inline-flex; flex-direction: column; align-items: center; justify-content: center;">
           <a href="https://propy.com" target="_blank" style="display: block; margin-bottom: 10px;">
-            <img src="Logos/propy-logo-1.png" alt="Propy Logo" style="height: 30px; width: auto; display: block; margin: 0 auto;">
+            <img src="Logos/propy-logo-1.png" alt="Propy Logo" style="height: 30px; width: auto; display: block;">
           </a>
-          <p style="margin: 0; line-height: 1.4;">
+          <p style="margin: 0; line-height: 1.4; text-align: center; color: #e0e6ed;">
             <a href="https://propy.com" target="_blank" style="color: #26c6da; text-decoration: none; font-weight: 500;">Propy</a> - Streamlined title and real estate transactions with blockchain tech.
           </p>
         </div>
+      </div>
 
         <!-- Web3 Education -->
-        <div style="position: relative; margin-bottom: 20px;">
+        <div style="position: relative; margin-top: 40px; margin-bottom: 30px;">
           <p style="position: relative; margin-left: 0px; margin-top: 0px; max-width: 600px; line-height: 1.4;">
             Web3 Education: 
             <a href="https://cyrin.io" target="_blank" style="color: #26c6da; text-decoration: none;">Cyrin</a> | 
@@ -1199,7 +1200,7 @@
         good: "良好",
         fair: "普通",
         needs_work: "需要维修",
-        upgrades: "近期升级/翻新",
+        upgrades: "近期升级/改装",
         issues: "物业问题",
         additional_info: "附加信息",
         how_heard: "您是如何得知我们的？",
@@ -2083,7 +2084,7 @@
         type_renter: "賃借人",
         type_landlord: "大家",
         type_investor: "投資家",
-        details: "あなたのニーズに関する詳細（場所、時間枠、予算等）を共有してください",
+        details: "あなたのニーズに関する詳細（位置、時間枠、予算等）を共有してください",
         dropdown_btn: "マッチングを強化 - よりスマートなフィットのために詳細を追加 +",
         intake_title: "クライアント情報収集",
         client_type: "クライアントタイプ",
