--- a/index.html
+++ b/index.html
@@ -760,11 +760,11 @@
       <div style="max-width: 600px; display: flex; justify-content: space-between;">
         <!-- Keller Williams Box -->
         <div style="background: rgba(30, 40, 60, 0.8); border-radius: 8px; padding: 20px; width: 290px; height: 150px; display: inline-flex; flex-direction: column; align-items: center; justify-content: center; margin-right: 10px;">
-          <a href="https://www.kw.com" target="_blank" style="display: block; margin-bottom: -10px;">
+          <a href="https://www.kw.com" target="_blank" style="display: block; margin-bottom: 0px;">
             <img src="Logos/kw logo.png" alt="Keller Williams Logo" style="height: 60px; width: auto; display: block;">
           </a>
           <p style="margin: 0; line-height: 1.4; text-align: center; color: #e0e6ed;">
-            <a href="https://www.kw.com/search" target="_blank" style="color: #26c6da; text-decoration: none; font-weight: 500;">Find your dream home with Keller Williams</a> - Your trusted real estate brokerage partner.
+            <a href="https://www.kw.com/search" target="_blank" style="color: #26c6da; text-decoration: none; font-weight: 500;">Find your dream home with </a> - Your trusted real estate brokerage partner.
           </p>
         </div>
 
