--- a/index.html
+++ b/index.html
@@ -759,18 +759,18 @@
     <div class="services-affiliates" style="margin: 30px auto; max-width: 600px; color: #e0e6ed; font-size: 0.95em;">
       <div style="max-width: 600px; display: flex; justify-content: space-between;">
         <!-- Keller Williams Box -->
-        <div style="background: rgba(30, 40, 60, 0.8); border-radius: 8px; padding: 20px; width: 290px; height: 150px; display: inline-flex; flex-direction: column; align-items: center; justify-content: center; margin-right: 10px;">
+        <div style="background: rgba(30, 40, 60, 0.8); border-radius: 8px; padding: 20px; width: 275px; height: 150px; display: inline-flex; flex-direction: column; align-items: center; justify-content: center; margin-right: 10px;">
           <a href="https://www.kw.com" target="_blank" style="display: block; margin-bottom: 0px;">
             <img src="Logos/kw logo.png" alt="Keller Williams Logo" style="height: 60px; width: auto; display: block;">
           </a>
           <p style="margin: 0; line-height: 1.4; text-align: center; color: #e0e6ed;">
-            <a href="https://www.kw.com/search" target="_blank" style="color: #26c6da; text-decoration: none; font-weight: 500;">Find your dream home with </a> - Your trusted real estate brokerage partner.
+            <a href="https://www.kw.com/search" target="_blank" style="color: #26c6da; text-decoration: none; font-weight: 500;">Find your dream home with </a> Your trusted real estate brokerage partner.
           </p>
         </div>
 
         <!-- Propy Box -->
-        <div style="background: rgba(30, 40, 60, 0.8); border-radius: 8px; padding: 40px; width: 290px; height: 150px; display: inline-flex; flex-direction: column; align-items: center; justify-content: center;">
-          <a href="https://propy.com" target="_blank" style="display: block; margin-bottom: 10px;">
+        <div style="background: rgba(30, 40, 60, 0.8); border-radius: 8px; padding: 40px; width: 275px; height: 150px; display: inline-flex; flex-direction: column; align-items: center; justify-content: center;">
+          <a href="https://propy.com" target="_blank" style="display: block; margin-bottom: 20px;">
             <img src="Logos/propy-logo-1.png" alt="Propy Logo" style="height: 30px; width: auto; display: block;">
           </a>
           <p style="margin: 0; line-height: 1.4; text-align: center; color: #e0e6ed;">
