--- a/index.html
+++ b/index.html
@@ -431,6 +431,8 @@
       width: auto;
       display: block;
       margin-left: 12px;
+      margin-top: -5px;
+      margin-bottom: 5px;
     }
     .services-affiliates .propy-text {
       position: relative;
@@ -760,20 +762,20 @@
       <div style="max-width: 600px; display: flex; justify-content: space-between;">
         <!-- Keller Williams Box -->
         <div style="background: rgba(30, 40, 60, 0.9); border-radius: 8px; padding: 20px; width: 255px; height: 150px; display: inline-flex; flex-direction: column; align-items: center; justify-content: center; margin-right: 10px;">
-          <a href="https://www.kw.com" target="_blank" style="display: block; margin-bottom: 5px; margin-top: 0px; margin-left: 0px;">
+          <a href="https://www.kw.com" target="_blank" style="display: block; position: relative; left: 0px; top: -10px;">
             <img src="Logos/kw logo.png" alt="Keller Williams Logo" style="height: 60px; width: auto; display: block;">
           </a>
-          <p style="margin: 0; line-height: 1.2; text-align: center; color: #e0e6ed; margin-top: 0px; margin-left: 0px;">
+          <p style="margin: 0; line-height: 1.2; text-align: center; color: #e0e6ed; position: relative; left: 0px; top: 0px;">
             <a href="https://www.kw.com/search" target="_blank" style="color: #26c6da; text-decoration: none; font-weight: 500;">Find your dream home with</a> Your trusted real estate brokerage partner.
           </p>
         </div>
 
         <!-- Propy Box -->
         <div style="background: rgba(30, 40, 60, 0.9); border-radius: 8px; padding: 20px; width: 255px; height: 150px; display: inline-flex; flex-direction: column; align-items: center; justify-content: center;">
-          <a href="https://propy.com" target="_blank" style="display: block; margin-bottom: 5px; margin-top: 0px; margin-left: 0px;">
+          <a href="https://propy.com" target="_blank" style="display: block; position: relative; left: 0px; top: -5px;">
             <img src="Logos/propy-logo-1.png" alt="Propy Logo" style="height: 30px; width: auto; display: block;">
           </a>
-          <p style="margin: 0; line-height: 1.2; text-align: center; color: #e0e6ed; margin-top: 10px; margin-left: 0px;">
+          <p style="margin: 0; line-height: 1.2; text-align: center; color: #e0e6ed; position: relative; left: 0px; top: 0px;">
             <a href="https://propy.com" target="_blank" style="color: #26c6da; text-decoration: none; font-weight: 500;">Propy</a> - Streamlined title and real estate transactions with blockchain tech.
           </p>
         </div>
